# Platformer

./: .gitignore  ARCH.md  Cargo.toml  LICENSE  NOTES.md  README.md  build.rs  howqq  renderdoc.cap
res/: GGQ.tsx  GGQ_l1.xcf  GGQ_l1_sprites.xcf  Platformer.tiled-session  entities.tsx  entities.xcf  game_ui.tmx  game_ui_tileset.tsx  game_ui_tileset.xcf  icon.kra  level_1.tmx  level_1.xcf  level_1_spritesheet.tsx  level_1_spritesheet.xcf  level_1_tileset.tsx  level_1_tileset.xcf  test_rotations.tmx
src/: audio.rs  camera.rs  character_controller.rs  collision.rs  constants.rs  entities.rs  entity.rs  event_dispatch.rs  geom.rs  input.rs  main.rs  map.rs  sprite.rs  sprite_collision.rs  sprite_entity.rs  state.rs  texture.rs  tileset.rs  util.rs
src/entities/: bat.rs  boss_fight_trigger.rs  boss_fish.rs  check_point.rs  death_animation.rs  exit_door.rs  falling_bridge.rs  fire_sprite.rs  fireball.rs  firebrand.rs  flying_fish.rs  hoodie.rs  mod.rs  power_up.rs  rising_floor.rs  spawn_point.rs  ui_digit.rs  ui_flight_bar.rs  ui_health_dot.rs  util.rs
src/gamestate/: game_state.rs  gpu_state.rs  mod.rs  ui.rs
src/shaders/: lcd.fs  lcd.fs.spv  lcd.vs  lcd.vs.spv  lcd.wgsl  lcd_column_average.wgsl  sprite.fs  sprite.fs.spv  sprite.vs  sprite.vs.spv  sprite.wgsl
src/sprite/: collision.rs  core.rs  mod.rs  rendering.rs
src/state/: app_state.rs  constants.rs  debug_overlay.rs  events.rs  game_controller.rs  game_state.rs  game_ui.rs  gpu_state.rs  lcd_filter.rs  mod.rs  overlay_ui.rs  ui.rs
