[package]
name = "platformer"
version = "0.1.0"
authors = ["Shamyl Zakariya <shamyl@gmail.com>"]
edition = "2021"

[features]
default = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.10", features = ["derive"] }
pollster = "0.2"
image = "0.24"
imgui = "0.10"
imgui-wgpu = "0.22"
imgui-winit-support = "0.10"
rand = "0.8"
structopt = "0.3"
winit = { version = "0.27", features = ["x11", "wayland"] }
wgpu = { version = "0.15" }
xml-rs = "0.8"
gilrs = "0.10"
rodio = "0.16"

[dependencies.cgmath]
version = "0.18"
features = ["swizzle"]
