[package]
name = "platformer"
version = "0.1.0"
authors = ["Shamyl Zakariya <shamyl@gmail.com>"]
edition = "2021"

[features]
default = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.10", features = ["derive"] }
pollster = "0.3"
image = "0.24"
rand = "0.8"
structopt = "0.3"
xml-rs = "0.8"
gilrs = "0.10"
rodio = "0.19"

winit = { version = "0.30" }
env_logger = "0.10"
log = "0.4"
wgpu = "22"

# imgui wgpu is usually pretty behind wgpu
# imgui = "0.11"
# imgui-wgpu = "0.24"
# imgui-winit-support = "0.11"


[dependencies.cgmath]
version = "0.18"
features = ["swizzle"]
