[package]
name = "platformer"
version = "0.1.0"
authors = ["Shamyl Zakariya <shamyl@gmail.com>"]
edition = "2021"

[features]
default = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.4"
image = "0.25"
rand = "0.8"
structopt = "0.3"
xml-rs = "0.8"
gilrs = "0.10"
rodio = "0.19"

winit = { version = "0.30" }
env_logger = "0.11"
log = "0.4"
wgpu = "22"

egui = "0.29"
egui-wgpu = "0.29"
egui-winit = "0.29"

[dependencies.cgmath]
version = "0.18"
features = ["swizzle"]
